--- a/lab2.html
+++ b/lab2.html
@@ -9,13 +9,17 @@
 <body>
   <h1> All About Chocolate </h1>
 
-  <p> This page is all about <a href="https://en.wikipedia.org/wiki/Chocolate">chocolate!</a></p>
+  <p class="less_important_paragraphs"> This page is all about <a href="https://en.wikipedia.org/wiki/Chocolate">chocolate!</a></p>
 
-  <p> Chocolate is the best food in the world, because it can be made into a drink, a paste,
+  <p class="less_important_paragraphs"> Chocolate is the best food in the world, because it can be made into a drink, a paste,
   or eaten plain! </p>
 
-  <p> According to Wikipedia, the earliest people to eat chocolate, that we know about were the
-  Olmecs! The Olmecs drank chocolate-based drinks, as early as 1900 BC. </p>
+  <span id="span_cover">What happens if you hover over me?</span>
+
+ 	<div id="hidden_div">
+	  <p id="important_paragraph"> According to Wikipedia, the earliest people to eat chocolate, that we know about were the
+	  Olmecs! The Olmecs drank chocolate-based drinks, as early as 1900 BC. </p>
+	</div>
 
 </body>
 
